<resources>
    <string name="app_name">Illuminate0.0</string>
    <string name="title_activity_homepage1">homepage1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="settingsPermissions">Set Permissions</string>
    <string name="settingsNotifications">Notification</string>
    <string name="settingsAbout">About</string>
    <string name="settingsFeedback">Feedback</string>

    <string name="settingsNotificationsSummary">Get notifications</string>
</resources>
