
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Application Settings">
        <CheckBoxPreference
            app:key="settings_notifications"
            app:title="@string/settingsNotifications"
            app:summary="@string/settingsNotificationsSummary"
            app:defaultValue="false"/>

        <ListPreference
            app:key="settings_permissions"
            app:title="@string/settingsPermissions"
            app:entries="@array/permissionOptions"
            app:entryValues="@array/permissionValues"
            app:defaultValue="Admin"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Support">


        <Preference
            app:key="settings_about"
            app:title="@string/settingsAbout"
            />
        <Preference
            app:key="settings_feedback"
            app:title="@string/settingsFeedback"
            app:summary="Report technical issues or suggest new features"/>



    </PreferenceCategory>

</PreferenceScreen>
